fix z-index

--- a/app/assets/stylesheets/navbars/splash_nav.scss
+++ b/app/assets/stylesheets/navbars/splash_nav.scss
@@ -6,7 +6,7 @@
   align-items: center;
   height: 60px;
   width: 100%;
-  background-color: $cyan;
+  background-color: white;
 
   .splash-nav-left {
     display: flex;
@@ -15,7 +15,7 @@
       margin-right: 20px;
       margin-left: 10px;
       font-size: 18px;
-      color: white;
+      color: $cyan;
       font-family: Arial, Helvetica, sans-serif;
       text-transform: uppercase;
     }
@@ -27,7 +27,7 @@
     display: flex;
 
     .nav-button {
-      color: black;
+      color: $cyan;
       text-decoration: none;
       box-sizing: border-box;
       border: none;
@@ -40,8 +40,8 @@
       position: relative;
 
       &:hover {
-        background-color: $cyan;
-        color: white;
+        background-color: white;
+        color: $cyan;
       }
 
       &:after {
@@ -52,11 +52,11 @@
         height: 100%;
         width: 100%;
         box-sizing: border-box;
-        border-bottom: 0px solid white;
+        border-bottom: 0px solid $cyan;
         transition: border-bottom 0.15s;
       }
       &:hover:after {
-        border-bottom: 5px solid white;
+        border-bottom: 5px solid $cyan;
         transition: border-bottom 0.15s;
       }
     }
